--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1",
-    "leaflet-defaulticon-compatibility": "^0.1.2"
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^26.0.1",
     "@eslint/js": "^9.9.0",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^22.5.2",
@@ -33,6 +34,7 @@
     "globals": "^15.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
